// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component renders with body-copy-medium variant by default 1`] = `
<p
  class="MuiTypography-root MuiTypography-body-copy-medium emotion-0"
>
  Lorem ipsum
</p>
`;

exports[`Typography component renders with different variants 1`] = `
<p
  class="MuiTypography-root MuiTypography-display-extra emotion-0"
>
  Lorem ipsum
</p>
`;
